<resources>
    <string name="app_name">美日</string>
    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="hiht_phone">请输入手机号</string>
    <string name="hiht_input_code">请输入验证码</string>
    <string name="hiht_pwd">请输入密码</string>
    <string name="hiht_incitation_code">请输入邀请码（必填）</string>
    <string name="text_to_login">已有账号，立即登录</string>
    <string name="text_immediate_regist">立即注册</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="toast_input_the_phone">请输入手机号码</string>
    <string name="toast_input_the_right_phone">请输入正确的手机号码</string>
    <string name="toast_input_the_ver_code">请输入验证码</string>
    <string name="toast_input_the_right_ver_code">验证码错误</string>
    <string name="toast_input_the_password">请输入密码</string>
    <string name="toast_input_the_promote">请输入邀请码</string>
    <string name="toast_password_length">密码长度应该在6~12位之间</string>
    <string name="toast_input_the_old_password">请输入原密码</string>
    <string name="toast_input_the_new_password">请输入新密码</string>
    <string name="toast_input_the_sure_password">请再次确认密码</string>
    <string name="toast_input_the_equre_password">两次输入密码不一致</string>
    <string name="toast_input_original_old_password">原先密码输入有误</string>
    <string name="dialog_loading">进行中</string>
    <string name="title_type_food">外卖</string>
    <string name="title_type_errands">跑腿</string>
    <string name="title_type_flowers_distribute">鲜花配送</string>
    <string name="title_type_nail_hairdres">美甲美发</string>
    <string name="title_type_ktv">娱乐</string>
    <string name="title_type_massage">按摩足疗</string>
    <string name="title_type_cosmetology">美容</string>
    <string name="title_type_photography">其他</string>
    <string name="title_type_clean">清洁</string>
    <string name="title_type_house_move">搬家</string>
    <string name="title_type_transfer">接送机</string>
    <string name="title_type_repair_install">修理安装</string>
    <string name="text_monthly_sale">月售%s单</string>
    <string name="text_delivery_price">¥ %s起送</string>
    <string name="text_delivery_time">平均%s分钟</string>
    <string name="text_delivery_distance">%sm</string>
    <string name="text_distribu_fee">配送费: %s</string>
    <string name="text_price">AU$%s</string>
    <string name="text_reduct_price">-AU$%s</string>
    <string name="title_food">商品</string>
    <string name="text_business_hours">营业时间: %s</string>
    <string name="title_food_details">店铺信息</string>
    <string name="title_order_details">订单详情</string>
    <string name="title_online_payment">在线支付</string>
    <string name="text_monthly_sales">月销 %s</string>
    <string name="text_takeaway_order_num">外卖订单:%s</string>
    <string name="text_takeaway_buy_num">跑腿订单:%s</string>
    <string name="text_price2">$%s</string>
    <string name="text_reduct_price02">-$%s</string>
    <string name="text_bind_china">绑定中国银行卡</string>
    <string name="text_bind_australia">绑定澳洲银行卡</string>
    <string name="title_bind_bank">绑定银行卡</string>
    <string name="title_bind_australia_bank">绑定澳洲银行卡</string>
    <string name="title_receiving_address">收货地址</string>
    <string name="title_modify_address">编辑收货地址</string>
    <string name="title_new_address">新增收货地址</string>
    <string name="toast_obtain_success">获取成功</string>
    <string name="toast_obtain_fail">获取失败</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_register_fail">注册失败</string>
    <string name="text_user_name">请输入用户名</string>
    <string name="text_maintain">首页</string>
    <string name="text_order">订单</string>
    <string name="text_browse">互助</string>
    <string name="text_task">任务</string>
    <string name="text_mys">我的</string>
    <string name="toast_keycode_back">再按一次退出程序</string>
    <string name="text_location_fail">定位失败</string>
    <string name="hint_company_name">输入商家名称</string>
    <string name="text_food_main_tips">你的口味，我都懂得</string>
    <string name="text_classify">分类</string>
    <string name="text_comprehensive_ranking">综合排序</string>
    <string name="text_screen">筛选</string>
    <string name="text_commodity">商品</string>
    <string name="text_merchant">商家</string>
    <string name="text_hot_search">热门搜索</string>
    <string name="text_history_search">历史搜索</string>
    <string name="toast_input_address">请输入地址</string>
    <string name="text_error_code">错误码 :</string>
    <string name="text_behalf">代购</string>
    <string name="text_pick_up_delivery_parts">取送件</string>
    <string name="text_input_food_infor">填写物品信息</string>
    <string name="hint_commodity_require">点击输入你需要取送的物品描述, 如: 快递</string>
    <string name="text_male">男</string>
    <string name="text_female">女</string>
    <string name="text_secret">保密</string>
    <string name="toast_permissions">相关权限被禁止</string>
    <string name="text_company">公司</string>
    <string name="text_home">家</string>
    <string name="text_school">学校</string>
    <string name="toast_input_contacts_name">请输入取餐联系人</string>
    <string name="toast_input_contacts_phone">请输入您的联系方式</string>
    <string name="toast_input_contacts_address">请选择您的地址</string>
    <string name="toast_input_contacts_details_address">请输入详细收货地址</string>
    <string name="text_sir">先生</string>
    <string name="text_am">女士</string>
    <string name="hint_code">验证码</string>
    <string name="text_log_immediately">立即登录</string>
    <string name="text_log_immediately_tips">请登录</string>
    <string name="text_set_default">设置为默认</string>
    <string name="text_logout">退出登录</string>
    <string name="text_sure_modify">确认修改</string>
    <string name="toast_login_out_success">退出登录成功</string>
    <string name="text_bond">保证金</string>
    <string name="text_cancel">取消</string>
    <string name="text_sure">确定</string>
    <string name="title_task_apply">任务申请</string>
    <string name="text_apply_task">任务申请</string>
    <string name="text_apply_task_content">对应款项将在任务确认完成后的1-3个工作日内支付至您绑定的银行账户</string>
    <string name="title_withdrawal">提现</string>
    <string name="text_current_location">当前位置</string>
    <string name="toast_login_success">登录成功！</string>
    <string name="text_order_cancel">取消订单成功</string>
    <string name="text_text_order_fail">取消订单失败</string>
    <string name="text_total_comodity">共%s件商品</string>
    <string name="toast_success_pay">付款成功!</string>
    <string name="text_system_process">系统正在处理，请稍等.....</string>
    <string name="toast_modify_pwd">修改密码成功，请重新登录</string>
    <string name="toast_input_the_content">内容不能为空</string>
    <string name="toast_submis_successful">提交成功</string>
    <string name="toast_modify_successful">修改成功</string>
    <string name="text_select_delegation_place">请选择代购地点</string>
    <string name="text_buying_on_behalf_tips">填写想代购的商品</string>
    <string name="hint_purchase_address">请输入购买地址</string>
    <string name="toast_input_the_address">收货地址不能为空</string>
    <string name="hint_task_address">请输入任务地址</string>
    <string name="text_drinks1">美日果汁</string>
    <string name="text_drinks2">果燃真果</string>
    <string name="text_drinks3">有米酸奶</string>
    <string name="text_drinks5">红枣紫米</string>
    <string name="text_drinks6">山楂紫米</string>
    <string name="text_drinks7">去冰</string>
    <string name="text_drinks8">少冰</string>
    <string name="text_drinks9">少糖</string>
    <string name="text_drinks10">大杯</string>
    <string name="text_drinks11">中杯</string>
    <string name="text_drinks12">超大杯</string>
    <string name="text_drinks13">一杯</string>
    <string name="text_drinks14">一瓶</string>
    <string name="text_drinks15">两杯</string>
    <string name="text_drinks16">可乐</string>
    <string name="text_drinks17">矿泉水</string>
    <string name="text_drinks18">需要小票</string>
    <string name="text_drinks19">与我联系</string>
    <string name="text_drinks20">谢谢</string>
    <string name="text_drinks21">美日好评</string>
    <string name="text_drinks22">小哥哥/小姐姐辛苦了</string>
    <string name="toast_snack1">KFC炸鸡</string>
    <string name="toast_snack2">麦当劳鸡块</string>
    <string name="toast_snack3">Pizza</string>
    <string name="toast_snack4">小鹿甜品</string>
    <string name="toast_snack5">绝味鸭脖</string>
    <string name="toast_snack6">薯条</string>
    <string name="toast_snack7">面包</string>
    <string name="toast_snack8">鲜芋仙</string>
    <string name="toast_snack9">一份</string>
    <string name="text_coffee1">星巴克</string>
    <string name="text_coffee2">Oliver Brown</string>
    <string name="text_coffee3">Costa</string>
    <string name="text_coffee4">Campos</string>
    <string name="text_coffee5">Latte</string>
    <string name="text_coffee6">Eapresso</string>
    <string name="text_coffee7">Flatwhite</string>
    <string name="text_coffee8">Americano</string>
    <string name="text_coffee9">少糖</string>
    <string name="text_coffee10">大杯</string>
    <string name="text_coffee11">中杯</string>
    <string name="text_coffee12">超大杯</string>
    <string name="text_coffee13">一杯</string>
    <string name="text_coffee14">我家楼下</string>
    <string name="text_coffee15">热的</string>
    <string name="text_coffee16">冰的</string>
    <string name="text_coffee17">去冰</string>
    <string name="text_coffee18">少糖</string>
    <string name="text_coffee19">两份糖</string>
    <string name="text_drugs1">布洛芬（ibuprofen）</string>
    <string name="text_drugs2">感冒药（Panadol Osteo）</string>
    <string name="text_drugs3">邦迪</string>
    <string name="text_drugs4">体温计</string>
    <string name="text_drugs5">口腔溃疡（SM33）</string>
    <string name="text_drugs6">腹泻（Gasrto-stop）</string>
    <string name="text_other1">帮取快递</string>
    <string name="text_other2">帮排队</string>
    <string name="text_other3">帮开门</string>
    <string name="text_other4">帮拿钥匙</string>
    <string name="text_other5">帮取衣服</string>
    <string name="text_other6">帮表白</string>
    <string name="text_expenses1">安卓数据线</string>
    <string name="text_expenses2">苹果数据线</string>
    <string name="text_expenses3">华为数据线</string>
    <string name="text_expenses4">打火机</string>
    <string name="text_expenses5">扑克牌</string>
    <string name="text_expenses6">文具</string>
    <string name="text_expenses7">胶带</string>
    <string name="text_expenses8">杀虫剂</string>
    <string name="text_expenses9">充电宝</string>
    <string name="text_expenses10">隐形眼镜</string>
    <string name="text_expenses11">避孕套</string>
    <string name="text_expenses12">验孕棒</string>
    <string name="text_fruits1">美日鲜果</string>
    <string name="text_fruits2">美日拼盘1号</string>
    <string name="text_fruits3">美日拼盘2号</string>
    <string name="text_fruits4">美日拼盘3号</string>
    <string name="text_fruits5">美日拼盘四号</string>
    <string name="text_fruits6">美日拼盘5号</string>
    <string name="text_fruits7">果燃真果</string>
    <string name="text_fruits8">香蕉</string>
    <string name="text_fruits9">苹果</string>
    <string name="text_fruits10">橙子</string>
    <string name="text_fruits11">奇异果</string>
    <string name="text_fruits12">一斤</string>
    <string name="text_fruits13">一份现切</string>
    <string name="text_breakfast1">大煎臣</string>
    <string name="text_breakfast2">小零煎饼</string>
    <string name="text_breakfast3">Breadtop蛋挞</string>
    <string name="text_welcome_landing">欢迎登陆美日</string>
    <string name="text_pwd_login">密码登录</string>
    <string name="text_code_login">验证码登录</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="text_new_pwd">新密码</string>
    <string name="text_confirm_password">确认密码</string>
    <string name="hint_again_new_pwd">请再次确认新密码</string>
    <string name="text_submit">提交</string>
    <string name="text_account_name">用户名</string>
    <string name="hint_account_name">请输入用户名</string>
</resources>