<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:paddingRight="14dp"
        android:paddingLeft="14dp"
        android:layout_marginRight="10dp"
        android:src="@mipmap/icon_back_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="20dp"
        />


    <EditText
        android:id="@+id/et_user_name"
        style="@style/loginEtStyles"
        android:hint="@string/text_user_name"
        android:layout_marginTop="46dp"/>

    <EditText
        android:id="@+id/et_phone"
        style="@style/loginEtStyles"
        android:hint="@string/hiht_phone"
        android:inputType="number" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_code"
        style="@style/loginEtStyles"
        android:hint="@string/hiht_input_code"
        android:inputType="number"
        android:maxLength="4"/>


        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:textColor="@color/colorGray"
            android:text="@string/text_get_code"
            />

    </RelativeLayout>


    <EditText
        android:id="@+id/et_pwd"
        style="@style/loginEtStyles"
        android:hint="@string/hiht_pwd"/>





    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="@string/text_register"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/colorHint"
        android:text="@string/text_to_login"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
</LinearLayout>