<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_landing"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="80dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/icon_open"
                android:drawablePadding="10dp"
                android:layout_marginRight="10dp"
                android:text="+61"/>

            <EditText
                android:id="@+id/et_phone"
                style="@style/loginHorizontalEtStyles"
                android:hint="@string/hiht_phone"
                android:inputType="number"
                android:layout_toRightOf="@id/tv"
                android:singleLine="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/shape_underline_gray"
                android:layout_below="@id/et_phone"/>

        </RelativeLayout>


    </RelativeLayout>

    <EditText
        android:id="@+id/et_pwd"
        style="@style/loginEtStyles"
        android:hint="@string/hiht_pwd"
        android:singleLine="true"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="@string/text_login"
        android:background="@drawable/shape_fillet_green_22dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/text_code_login" />


        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/text_forget_password"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>



</LinearLayout>