<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.meiriuser.widget.NoScrollViewPager
            android:id="@+id/noScrollViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true">

        </com.example.meiriuser.widget.NoScrollViewPager>


        <View
            style="@style/viewLine"/>


        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="5dip"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rb_maintain"
                android:drawableTop="@drawable/selector_main_bottom_maintain"
                android:textColor="@color/selector_main_bottom_text"
                android:text="@string/text_maintain"
                style="@style/bottom_main_styles"/>

            <RadioButton
                android:id="@+id/rb_order"
                android:drawableTop="@drawable/selector_main_bottom_order"
                android:textColor="@color/selector_main_bottom_text"
                android:text="@string/text_order"
                style="@style/bottom_main_styles"/>

            <RadioButton
                android:id="@+id/rb_browse"
                android:drawableTop="@drawable/selector_main_bottom_browse"
                android:textColor="@color/selector_main_bottom_text"
                android:text="@string/text_browse"
                style="@style/bottom_main_styles"/>

            <RadioButton
                android:id="@+id/rb_task"
                android:drawableTop="@drawable/selector_main_bottom_task"
                android:textColor="@color/selector_main_bottom_text"
                android:text="@string/text_task"
                style="@style/bottom_main_styles"/>

            <RadioButton
                android:id="@+id/rb_mys"
                android:drawableTop="@drawable/selector_main_bottom_mys"
                android:textColor="@color/selector_main_bottom_text"
                android:text="@string/text_mys"
                style="@style/bottom_main_styles"/>

        </RadioGroup>
    </LinearLayout>




</LinearLayout>
