<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/base_bg">

    <include layout="@layout/include_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:text="@string/text_account_name"
            />

        <EditText
            android:id="@+id/et_account_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:hint="@string/hint_account_name"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="@string/text_submit"
        android:background="@drawable/shape_fillet_green_22dp"/>
   <!-- <Button
        android:id="@+id/btn_next"
        style="@style/btnRedEnable"
        android:layout_marginTop="60dp"
        android:text="@string/text_next"/>-->
</LinearLayout>