<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

   <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:background="@color/colorWhite">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/icon_open"
                    android:drawablePadding="10dp"
                    android:layout_marginRight="10dp"
                    android:text="+61"/>

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/loginHorizontalEtStyles"
                    android:hint="@string/hiht_phone"
                    android:inputType="number"
                    android:layout_toRightOf="@id/tv"
                    android:singleLine="true"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/shape_underline_gray"
                    android:layout_below="@id/et_phone"/>

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_code"
                style="@style/loginEtStyles"
                android:hint="@string/hint_code"
                android:singleLine="true"/>

            <Button
                android:id="@+id/btn_code"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/shape_fillet_green_22dp"
                android:text="获取短信验证码"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pwd1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_new_pwd"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColorHint="@color/colorGray"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:hint="@string/hint_input_new_pwd"
                android:layout_toRightOf="@id/tv_pwd1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/shape_underline_gray"
                android:layout_below="@id/et_new_pwd"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pwd2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_confirm_password"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/et_again_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColorHint="@color/colorGray"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:hint="@string/hint_again_new_pwd"
                android:layout_toRightOf="@id/tv_pwd2"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/shape_underline_gray"
                android:layout_below="@id/et_again_pwd"/>

        </RelativeLayout>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/text_submit"
            android:background="@drawable/shape_fillet_green_22dp"/>


    </LinearLayout>

</LinearLayout>