<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:paddingRight="14dp"
        android:paddingLeft="14dp"
        android:layout_marginRight="10dp"
        android:src="@mipmap/icon_back_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:background="@color/colorWhite">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_landing"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="40dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/icon_open"
                android:drawablePadding="10dp"
                android:layout_marginRight="10dp"
                android:text="+61"/>

            <EditText
                android:id="@+id/et_phone"
                style="@style/loginHorizontalEtStyles"
                android:hint="@string/hiht_phone"
                android:inputType="number"
                android:layout_toRightOf="@id/tv"
                android:singleLine="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/shape_underline_gray"
                android:layout_below="@id/et_phone"/>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/et_code"
            style="@style/loginEtStyles"
            android:hint="@string/hint_code"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btn_code"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_fillet_green_22dp"
            android:text="获取短信验证码"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="未注册的手机号验证后自动创建美日账户"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="@string/text_login"
        android:background="@drawable/shape_fillet_green_22dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:text="@string/text_pwd_login" />
    </LinearLayout>

</LinearLayout>